--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
             <section class="projects">
                 <h2>Portfolio Website</h2>
                 <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
-                <p>Build a portfolio website from scratch using only vanilla HTML and CSS with no frameworks.</p>
+                <p>Build a portfolio website from scratch using only vanilla HTML and CSS without any frameworks.</p>
                 <a class="button" href="https://tommartinportfolio.netlify.app/">View Repository</a>
                 <p>63.5/66 HD</p>
             </section>
@@ -44,7 +44,7 @@
                 <h2>RESTful API</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
                 <p>Build a RESTful API web server using Python, Flask, and PostgreSQL, that requires user information to be authorised by JWT and hashed with Bcrypt.</p>
-                <a class="button">Work in Progress</a>
+                <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">Work in Progress</a>
                 <p>/84</p>
             </section>
             <section class="projects">
