changed Diploma of Design to currently studying

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <main>
         <h1 class="navheading">About Me</h1>
     <section class="aboutmepara">
-        <p>Tom is an enthusiastic, positive, and passionate individual who appreciates communication and collaboration towards shared objectives with like-minded individuals. He possesses a keen eye for detail, is a logical thinker, and demonstrates strong work ethic. Readied with a bachelor's degree in marketing and a diploma in visual design, he is poised to leverage his existing skill set alongside his recent education and experience in full-stack web development to pursue a new career path.
+        <p>Tom is an enthusiastic, positive, and passionate individual who appreciates communication and collaboration towards shared objectives with like-minded individuals. He possesses a keen eye for detail, is a logical thinker, and demonstrates strong work ethic. Readied with a bachelor's degree in marketing and a diploma in visual design (currently studying), he is poised to leverage his existing skill set alongside his recent education and experience in full-stack web development to pursue a new career path.
         </p>
         <p>Whatever endeavour Tom sets his mind to, he accomplishes, fuelled by his strong work ethic and unwavering determination. He is inherently self-motivated and willing to go to great lengths to reach his objectives. Tom is currently seeking to channel this passion and dedication into a career that fosters professional growth while allowing him to create innovative applications that contribute positively to society and the environment.</p>  
     </secton>
