--- a/projects.html
+++ b/projects.html
@@ -27,25 +27,25 @@
         <h1 class="navheading">Coder Academy Assignments</h1>
         <section class="projectslayout">
             <section class="projects">
-                <h2>Portfolio Website</h2>
-                <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
-                <p>Build a portfolio website from scratch using only vanilla HTML and CSS without any frameworks.</p>
-                <a class="button" href="https://tommartinportfolio.netlify.app/">View Repository</a>
-                <p>63.5/66 HD</p>
+                <h2>RESTful API</h2>
+                <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
+                <p>This API facilitates the management of events, attendees, and ticketing processes. It offers a comprehensive suite of features to streamline event planning and communication, including user authentication, event creation, attendee management, and invoicing.</p>
+                <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">Work in Progress</a>
+                <p>/84</p>
             </section>
             <section class="projects">
                 <h2>Terminal Application</h2>
                 <img class="projectimg" src="images/highscores.png" alt="picture of quiz night high scores board in terminal " width= "70%">
-                <p>Build a terminal application using Python and Bash scripting.</p>
+                <p>This interactive terminal application is designed to facilitate fun and engaging quiz nights. Users can create, customise, and participate in quizzes directly from their terminal. The application supports various question types and tracks scores to provide a seamless quiz experience.</p>
                 <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Repository</a>
                 <p>94/96 HD</p>
             </section>
             <section class="projects">
-                <h2>RESTful API</h2>
-                <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
-                <p>Build a RESTful API web server using Python, Flask, and PostgreSQL, that requires user information to be authorised by JWT and hashed with Bcrypt.</p>
-                <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">Work in Progress</a>
-                <p>/84</p>
+                <h2>Portfolio Website</h2>
+                <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
+                <p>This portfolio website showcases the professional work and projects of Tom Martin, a passionate and skilled web developer. Built using only vanilla HTML and CSS, the site features a clean, responsive design and easy navigation. It highlights Tom's expertise in font-end web development.</p>
+                <a class="button" href="https://tommartinportfolio.netlify.app/">View Repository</a>
+                <p>63.5/66 HD</p>
             </section>
             <section class="projects">
                 <h2>Full Stack Application</h2>
