--- a/projects.html
+++ b/projects.html
@@ -30,13 +30,15 @@
                 <h2>RESTful API</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
                 <p>This API facilitates the management of events, attendees, and ticketing processes. It offers a comprehensive suite of features to streamline event planning and communication, including user authentication, event creation, attendee management, and invoicing.</p>
-                <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">Work in Progress</a>
+                <p>Software: Python, Flask, PostgreSQL, SQLAlchemy, Marshmallow, Bcryp and JWT.</p>
+                <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">View Repository</a>
                 <p>/84</p>
             </section>
             <section class="projects">
                 <h2>Terminal Application</h2>
                 <img class="projectimg" src="images/highscores.png" alt="picture of quiz night high scores board in terminal " width= "70%">
                 <p>This interactive terminal application is designed to facilitate fun and engaging quiz nights. Users can create, customise, and participate in quizzes directly from their terminal. The application supports various question types and tracks scores to provide a seamless quiz experience.</p>
+                <p>Software: Python and Bash Scripts.</p>
                 <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Repository</a>
                 <p>94/96 HD</p>
             </section>
@@ -44,6 +46,7 @@
                 <h2>Portfolio Website</h2>
                 <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
                 <p>This portfolio website showcases the professional work and projects of Tom Martin, a passionate and skilled web developer. Built using only vanilla HTML and CSS, the site features a clean, responsive design and easy navigation. It highlights Tom's expertise in font-end web development.</p>
+                <p>Software: </p>
                 <a class="button" href="https://tommartinportfolio.netlify.app/">View Repository</a>
                 <p>63.5/66 HD</p>
             </section>
