changed project styling

--- a/projects.html
+++ b/projects.html
@@ -25,12 +25,14 @@
     </header> 
     <main>
         <h1 class="navheading">Coder Academy Assignments</h1>
+        <section class="projectslayout">
             <section class="projects">
                 <h2>RESTful API</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
                 <p>Build a RESTful API web server using Python, Flask, SQLAlchemy, and PostgreSQL, that requires user information to be authorised by JWT and hashed with Bcrypt.</p>
-                <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">View Repository</a>
+                <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">Work in Progress</a>
                 <p>/84</p>
+            </section>
             <section class="projects">
                 <h2>Terminal Application</h2>
                 <img class="projectimg" src="images/highscores.png" alt="picture of quiz night high scores board in terminal " width= "70%">
@@ -38,14 +40,12 @@
                 <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Repository</a>
                 <p>94/96 HD</p>
             </section>
-            <section class="projectslayout">
             <section class="projects">
                 <h2>Portfolio Website</h2>
                 <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
                 <p>Build a portfolio website from scratch using only vanilla HTML and CSS without any frameworks.</p>
                 <a class="button" href="https://tommartinportfolio.netlify.app/">View Repository</a>
                 <p>63.5/66 HD</p>
-            </section>
             </section>
             <section class="projects">
                 <h2>Full Stack Application</h2>
