changed API button to 'view repo'

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
                 <h2>RESTful API</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
                 <p>Build a RESTful API web server using Python, Flask, SQLAlchemy, and PostgreSQL, that requires user information to be authorised by JWT and hashed with Bcrypt.</p>
-                <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">Work in Progress</a>
+                <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">View Repository</a>
                 <p>/84</p>
             </section>
             <section class="projects">
