added expressJS to skills

--- a/skills.html
+++ b/skills.html
@@ -33,14 +33,13 @@
                     <li>Flask</ls>
                     <li>Javascript</li>
                     <li>React</li>
-                    <li>Bootstrap</li>
                     <li>NodeJS</li>
+                    <li>ExpresJS</li>
                     <li>TypeScript</li>
                     <li>MongoDB</li>
                     <li>RESTful APIs</li>
                     <li>PostgreSQL</li>
                     <li>Git & Git Hub</li>
-                    
                 </ul>
             </section>
             <section class="skillbox">
