edited project grades hierarchy

--- a/projects.html
+++ b/projects.html
@@ -29,44 +29,44 @@
             <section class="projects">
                 <h2>RESTful API</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.35.58 am.png" alt="picture of api webserver example" width="70%">
+                <p><b>Grade: HD</b></p>
                 <p>Build a RESTful API web server using Python, Flask, SQLAlchemy, and PostgreSQL, that requires user information to be authorised by JWT and hashed with Bcrypt.</p>
                 <a class="button" href="https://github.com/TommyMart/Vinyl_Collection_API.git">View Repository</a>
-                <p>Grade: HD</p>
             </section>
             <section class="projects">
                 <h2>Terminal Application</h2>
                 <img class="projectimg" src="images/highscores.png" alt="picture of quiz night high scores board in terminal " width= "70%">
+                <p><b>Grade: HD</b></p>
                 <p>Build a terminal application using Python and Bash scripting.</p>
                 <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Repository</a>
-                <p>Garde: HD</p>
             </section>
             <section class="projects">
                 <h2>Portfolio Website</h2>
                 <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
+                <p><b>Grade: HD</b></p>
                 <p>Build a portfolio website from scratch using only vanilla HTML and CSS without any frameworks.</p>
                 <a class="button" href="https://tommartinportfolio.netlify.app/">View Repository</a>
-                <p>Grade: HD</p>
             </section>
             <section class="projects">
                 <h2>Full Stack Application</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.38.59 am.png" alt="picture of full stack app example" width="70%">
+                <p><b>Grade: </b></p>
                 <p>Plan, design and build a Full-Stack web application using MongoDB, Express, REACT and Node.js.</p>
                 <a class="button">Work in Progress</a>
-                <p>Grade: </p>
             </section>
             <section class="projects">
                 <h2>Written Assessments</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
+                <p><b>Grade: HD</b></p>
                 <p>Applied Computation, Principles of Information Systems, Principles of Programming, Principles of Software Engineering, Database Design and Development.</p>
                 <a class="button">Completed</a>
-                <p>Grade: HD</p>
             </section>
             <section class="projects">
                 <h2>Discrete Mathematics</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.31.56 am.png" alt="picture of whiteboard with algorithmns" width="70%">                
+                <p><b>Grade: HD</b></p>
                 <p>Bases, Boolean Logic, Sets, Big O, Matrices, Graphs, Functions & Relations.</p>
                 <a class="button">Complete</a>
-                <p>Grade: HD</p>
             </section>
         </section>
     </main>
