added personal projects section and dice rolling app card and website link

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
                 <p><b>Grade: HD</b></p>
                 <p>Applied Computation, Principles of Information Systems, Principles of Programming, Principles of Software Engineering, Database Design and Development.</p>
-                <a class="button">Completed</a>
+                <a class="button">Complete</a>
             </section>
             <section class="projects">
                 <h2>Discrete Mathematics</h2>
@@ -68,6 +68,23 @@
                 <p>Bases, Boolean Logic, Sets, Big O, Matrices, Graphs, Functions & Relations.</p>
                 <a class="button">Complete</a>
             </section>
+        </section>
+        <h1 class="navheading">Personal Projects</h1>
+        <section class="projectslayout">
+            <section class="projects">
+                <h2>Dice Rolling App</h2>
+                <img class="projectimg" src="images/diceRollingApp.png" alt="picture of api webserver example" width="70%">
+                <p>The dice rolling app is a dynamic and interactive tool designed to simulate the rolling of dice, offering users a visually appealing and engaging experience. Built using JavaScript, HTML, and CSS, the app allows users to input a desired dice size (ranging from 1 to 20 sides) and roll the dice to generate a random outcome. It also includes a fun "Count to 100" game.</p>
+                <a class="button" href="https://dicerollerapp321.netlify.app/">Visit Website</a>
+            </section>
+            <!-- <section class="projects">
+                <h2>Terminal Application</h2>
+                <img class="projectimg" src="images/highscores.png" alt="picture of quiz night high scores board in terminal " width= "70%">
+                <p><b>Grade: HD</b></p>
+                <p>Build a terminal application using Python and Bash scripting.</p>
+                <a class="button" href="https://github.com/TommyMart/T1A3_Terminal_App">View Repository</a>
+            </section> -->
+            
         </section>
     </main>
     <footer>
