--- a/skills.html
+++ b/skills.html
@@ -39,7 +39,7 @@
                     <li>MongoDB</li>
                     <li>RESTful APIs</li>
                     <li>PostgreSQL</li>
-                    <li>Git & Git Hub</li>
+                    <li>Git & GitHub</li>
                 </ul>
             </section>
             <section class="skillbox">
@@ -61,7 +61,7 @@
                     <li>Digital Marketing</li>
                     <li>Google Adds</li>
                     <li>Social Media Management</li>
-                    <li>Brand Identity</li>
+                    <li>Branding</li>
                     <li>Content Creation</li>
                 </ul>
             </section>
