--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </header> 
     <main>
         <img src="images/1517064539613.jpeg" alt="photo picture of Thomas Martin">
-        <p class="hi"><em>Hi, I'm...</em></p>
+        <p class="hi"><em>Hi, I'm</em></p>
         <h1>Tom Martin.</h1>
-        <p><em>Full stack developer and designer living in Adelaide, Australia.</em></p>
+        <p><em>A junior full stack developer and designer living in Adelaide, Australia.</em></p>
     <div class="examplebutton">
         <a class="button" href="projects.html">Examples of my work</a>
     </div>
