edited about me

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
             <li><strong>Full-Stack Development Intensive Bootcamp</strong> at <em>Coder Academy.</em></li>
             <li><strong>Higher Education Diploma of Information Technology</strong> at the <em>Academy of Interactive Technology.</em></li>
             <li><strong>Meta Front-End Developer Professional Certificate</strong> at <em>Meta.</em></li>
-            <li><strong>Diploma of Visual Design</strong> at <em>Adelaide College of the Arts.</em></li>           
-            <li><strong>Graphic Design Bootcamp</strong> at <em>The Graphic Design School.</em></li>
+            <li><strong>Diploma of Visual Design</strong> at <em>The Adelaide College of the Arts.</em></li>           
+            <li><strong>Graphic Design Bootcamp</strong> at <em>The Sydney Graphic Design School.</em></li>
             <li><strong>Bachelor of Management (Marketing)</strong> at <em>The University of South Australia.</em></li>
             
         </ul>
